Update VertxExtensionMethodBoostrap.java